--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "next": "15.5.5",
     "next-videos": "^1.4.1",
     "react": "19.1.0",
