--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "15.5.5",
     "next-videos": "^1.4.1",
     "react": "19.1.0",
