--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint-config-next": "^16.1.6",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
-    "next": "15.5.5",
+    "next": "^16.1.6",
     "next-videos": "^1.4.1",
-    "react": "19.1.0",
+    "react": "^19.2.4",
     "react-countup": "^6.5.3",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0"
   },
